Related: tdf#105514 recursive fallback GetOpenGLContext

Change-Id: Icb8f3751806ef9c1c7c92cd8b7cc7c28595eca22
Reviewed-on: https://gerrit.libreoffice.org/33580
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>